--- a/index.html
+++ b/index.html
@@ -21,14 +21,23 @@
 	<nav>
 		<div class="container-fluid">
 			<div class="navbar-header">
+				<!-- Commented out button
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         				<span class="sr-only">Toggle navigation</span>
         				<span class="icon-bar"></span>
         				<span class="icon-bar"></span>
         				<span class="icon-bar"></span>
       				</button>
+				-->
 				<a class="navbar-brand" href="#">IB</a>
 			</div>
+
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li>About</li>
+					<li>Resume</li>
+				</ul>
+			</div> <!-- .navbar-collapse -->
 		</div> <!--- container-fluid --->
 	</nav>
 
