--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
 
-	<!--- Navbar goes here --->
+	<!-- Navbar goes here -->
 	<nav>
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -38,7 +38,7 @@
 					<li>Resume</li>
 				</ul>
 			</div> <!-- .navbar-collapse -->
-		</div> <!--- container-fluid --->
+		</div> <!-- container-fluid -->
 	</nav>
 
         <!-- Add your site or application content here -->
