--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/boostrap.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -21,14 +21,14 @@
 	<nav>
 		<div class="container-fluid">
 			<div class="navbar-header">
-				
+				<!-- Commented out button 
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         				<span class="sr-only">Toggle navigation</span>
         				<span class="icon-bar"></span>
         				<span class="icon-bar"></span>
         				<span class="icon-bar"></span>
       				</button>
-				
+				-->
 				<a class="navbar-brand" href="#">IB</a>
 			</div>
 
@@ -47,7 +47,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
-	<script src="js/vendor/bootstrap.js"></script>
+	<!-- <script src="js/vendor/bootstrap.js"></script> -->
         <script src="js/main.js"></script>
 
     </body>
