--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <body>
 
 	<!-- Navbar goes here -->
-	<nav>
+	<nav class="navbar navbar-default">
 		<div class="container-fluid">
+			<!-- Header -->
 			<div class="navbar-header">
-				<!-- Commented out button 
+				<!-- Commented out button
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         				<span class="sr-only">Toggle navigation</span>
         				<span class="icon-bar"></span>
@@ -29,7 +30,7 @@
         				<span class="icon-bar"></span>
       				</button>
 				-->
-				<a class="navbar-brand" href="#">IB</a>
+				IB
 			</div>
 
 			<div class="collapse navbar-collapse">
