--- a/index.html
+++ b/index.html
@@ -22,28 +22,21 @@
 		<div class="container-fluid">
 			<!-- Header -->
 			<div class="navbar-header">
-				<!-- Commented out button
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        				<span class="sr-only">Toggle navigation</span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-      				</button>
-				-->
-				IB
+				<a class="navbar-brand" href="#">IB</a>
 			</div>
 
+			<!-- Webpage links -->
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li>About</li>
-					<li>Resume</li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Resume</a></li>
 				</ul>
 			</div> <!-- .navbar-collapse -->
 		</div> <!-- container-fluid -->
 	</nav>
 
         <!-- Add your site or application content here -->
-        <p>Ian Brown</p>
+        
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
