Added link to github page using octicons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/octicons/octicons.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -30,6 +31,9 @@
 				<ul class="nav navbar-nav">
 					<li><a href="#">About</a></li>
 					<li><a href="#">Resume</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="https://github.com/imayobrown"><span class="octicon octicon-mark-github"></span></a>
 				</ul>
 			</div> <!-- .navbar-collapse -->
 		</div> <!-- container-fluid -->
