--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/octicons/octicons.css">
+	<link rel="stylesheet" href="css/entypo-glyph-set/entypo.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -34,6 +35,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="https://github.com/imayobrown"><span class="octicon octicon-mark-github"></span></a>
+					<li><a href="#"><span class="entypo-social entypo-twitter"></span></a>
 				</ul>
 			</div> <!-- .navbar-collapse -->
 		</div> <!-- container-fluid -->
