Added new font and jumbotron.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Reenie+Beanie'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/octicons/octicons.css">
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
+	<link rel="stylesheet" href="css/custom.css">
+	
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -42,7 +45,11 @@
 		</div> <!-- container-fluid -->
 	</nav>
 
-        <!-- Add your site or application content here -->
+	<div class="jumbotron">
+		<div class="container">
+  			<h1>Ian Brown</h1>
+		</div>
+	</div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
