Added hrefs to twitter and linkedin icons and changed navbar styling to have no bottom moargin.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="https://github.com/imayobrown"><span class="octicon octicon-mark-github"></span></a>
-					<li><a href="#"><span class="fa fa-twitter"></span></a>
-					<li><a href="#"><span class="fa fa-linkedin"></span></a>
+					<li><a href="https://twitter.com/brown_mayo"><span class="fa fa-twitter"></span></a>
+					<li><a href="https://www.linkedin.com/in/ian-brown-0791244a"><span class="fa fa-linkedin"></span></a>
 				</ul>
 			</div> <!-- .navbar-collapse -->
 		</div> <!-- container-fluid -->
