--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
 
 	<!-- Navbar goes here -->
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default custom-navbar">
 		<div class="container-fluid">
 			<!-- Header -->
 			<div class="navbar-header">
@@ -33,8 +33,9 @@
 			<!-- Webpage links -->
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="#">About</a></li>
+					<li><a href="#About">About</a></li>
 					<li><a href="#">Resume</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="https://github.com/imayobrown"><span class="octicon octicon-mark-github"></span></a>
@@ -47,9 +48,57 @@
 
 	<div class="jumbotron">
 		<div class="container">
-  			<h1>Ian Brown</h1>
+  			<h1 class="custom-section-header">Ian Brown</h1>
+			<p class="text-center">Witty line giving candid insight into Ian's personality but also describing what he is and plans to do.</p>
 		</div>
 	</div>
+	
+	<!-- About Section -->
+	<div class="container">
+		<h1 class="custom-section-header" id="About">About</h1>
+		<p class="text-center">Short bio about Ian, his past and his plans for the future. Include some of his hobbies and interests and what he has done in pursuit of these.</p>
+	</div>
+	
+	<!-- Test Section -->
+	<div class="container test-section">
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+		<p>a</p>
+	</div>
+
+	<!-- Contact Section -->
+	<footer class="footer" id="contact">
+		<div class="container">
+			<p class="text-muted">Here be contact information</p>
+		</div>
+	</footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
