Added some background colors and worked on contacts section.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Reenie+Beanie'>
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Reenie+Beanie|Roboto:400,100'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -22,7 +22,7 @@
     </head>
     <body>
 
-	<!-- Navbar goes here -->
+	<!-- Navbar -->
 	<nav class="navbar navbar-default custom-navbar">
 		<div class="container-fluid">
 			<!-- Header -->
@@ -34,8 +34,9 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li><a href="#About">About</a></li>
+					<li><a href="#Projects">Projects</a></li>
 					<li><a href="#">Resume</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#Contact">Contact</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="https://github.com/imayobrown"><span class="octicon octicon-mark-github"></span></a>
@@ -46,7 +47,7 @@
 		</div> <!-- container-fluid -->
 	</nav>
 
-	<div class="jumbotron">
+	<div class="jumbotron custom-jumbotron">
 		<div class="container">
   			<h1 class="custom-section-header">Ian Brown</h1>
 			<p class="text-center">Witty line giving candid insight into Ian's personality but also describing what he is and plans to do.</p>
@@ -54,49 +55,15 @@
 	</div>
 	
 	<!-- About Section -->
-	<div class="container">
+	<div class="container about">
 		<h1 class="custom-section-header" id="About">About</h1>
 		<p class="text-center">Short bio about Ian, his past and his plans for the future. Include some of his hobbies and interests and what he has done in pursuit of these.</p>
 	</div>
-	
-	<!-- Test Section -->
-	<div class="container test-section">
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-		<p>a</p>
-	</div>
 
 	<!-- Contact Section -->
-	<footer class="footer" id="contact">
+	<footer class="footer" id="Contact">
 		<div class="container">
-			<p class="text-muted">Here be contact information</p>
+			<p class="text-muted">Contact me at:     <span class="email">i.mayo.brown@gmail.com</span></p>
 		</div>
 	</footer>
 
