--- a/index.html
+++ b/index.html
@@ -27,13 +27,19 @@
 		<div class="container-fluid">
 			<!-- Header -->
 			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="mobile-collapse" aria-expanded="false">
+					<span class="sr-only">Toggle Navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 				<a class="navbar-brand" href="#">IB</a>
 			</div>
 
 			<!-- Webpage links -->
-			<div class="collapse navbar-collapse">
+			<div class="collapse navbar-collapse" id="mobile-collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="#About">About</a></li>
+					<li class="active"><a href="#About">About <span class="sr-only">(current)</span></a></li>
 					<li><a href="#Projects">Projects</a></li>
 					<li><a href="#">Resume</a></li>
 					<li><a href="#Contact">Contact</a></li>
