--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="container-fluid">
 			<!-- Header -->
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="mobile-collapse" aria-expanded="false">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mobile-collapse" aria-expanded="false">
 					<span class="sr-only">Toggle Navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -76,7 +76,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
-	<!-- <script src="js/vendor/bootstrap.js"></script> -->
+	<script src="js/vendor/bootstrap.js"></script>
         <script src="js/main.js"></script>
 
     </body>
