Removed focus on first navbar element

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 	<link rel="stylesheet" href="css/octicons/octicons.css">
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
 	<link rel="stylesheet" href="css/custom.css">
-	
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -39,7 +38,7 @@
 			<!-- Webpage links -->
 			<div class="collapse navbar-collapse" id="mobile-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#About">About <span class="sr-only">(current)</span></a></li>
+					<li><a href="#About">About <span class="sr-only">(current)</span></a></li>
 					<li><a href="#Projects">Projects</a></li>
 					<li><a href="#">Resume</a></li>
 					<li><a href="#Contact">Contact</a></li>
