Added projects section with data2Dash

--- a/index.html
+++ b/index.html
@@ -60,9 +60,19 @@
 	</div>
 	
 	<!-- About Section -->
-	<div class="container about">
-		<h1 class="custom-section-header" id="About">About</h1>
+	<div class="container about" id="About">
+		<h1 class="custom-section-header">About</h1>
 		<p class="text-center">Short bio about Ian, his past and his plans for the future. Include some of his hobbies and interests and what he has done in pursuit of these.</p>
+	</div>
+
+	<div class="container projects" id="Projects">
+		<h1 class="custom-section-header">Projects</h1>
+		<row>
+			<div class="col-md-6">
+				<h3 class="project-title"><a href="#">data2Dash</a></h3>
+				<p>A small project that started as an exercise in using Python's Django Web Framework and Backbone to make single page web application. Through evolving ideas the future plan for the project is to create a self hosted platform for persistent data storage and display using a lightweight single page web application and RESTful API.</p>
+			</div>
+		</row>
 	</div>
 
 	<!-- Contact Section -->
