--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
 	<div class="container about" id="About">
 		<h1 class="custom-section-header">About</h1>
 		<p class="text-center">Short bio about Ian, his past and his plans for the future. Include some of his hobbies and interests and what he has done in pursuit of these.</p>
+		<ul>
+			<li>Software Engineer</li>
+			<li>UMass Amherst Undergraduate --> Physics/Math</li>
+			<li>Georgia Tech Graduate --> OMSCS</li>
+			<li>Linux</li>
+			<li>C/C++ and Qt</li>
+			<li>Python and Django --> Backend</li>
+			<li>Javascript and Backbone --> Single page web application</li>
+			<li>HTML/CSS and Bootstrap --> Frontend development</li>
+			<li>Software system design</li>
+			<li>Data visualization and analysis</li>
+			<li>Software development</li>
+			<li>Optimization</li>
+		</ul>
 	</div>
 
 	<div class="container projects" id="Projects">
@@ -72,7 +86,16 @@
 				<h3 class="project-title"><a href="#">data2Dash</a></h3>
 				<p>A small project that started as an exercise in using Python's Django Web Framework and Backbone to make single page web application. Through evolving ideas the future plan for the project is to create a self hosted platform for persistent data storage and display using a lightweight single page web application and RESTful API.</p>
 			</div>
+			<div class="col-md-6">
+				<h3 class="project-title"><a href="#">Graduate Class Projects</a></h3>
+				<p>A growing set of projects that were completed for classes taken in the Georgia Tech Masters of Science Computer Science program. Classes taken so far include Operating Systems and Software Development Process. Currently all code is located in private repositories to comply with Georgia Tech Academic Honesty. If interested in looking at any of the source code feel free to contact me for access to the GitHub repositories.</p>
+			</div>
 		</row>
+		<row>
+		<div class="col-md-6 col-md-offset-3">
+			<h3 class="project-title"><a href="#">DesignDocumentTemplates</a></h3>
+			<p>A small set of design document templates in Markdown format. These were written to help facilitate the initial software design of a new project by defining the requirements and scope of the project.</p>
+		</div>
 	</div>
 
 	<!-- Contact Section -->
