Minor changes to jumbotron header and section header class.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 	<div class="jumbotron custom-jumbotron">
 		<div class="container">
-  			<h1 class="custom-section-header">Ian Brown</h1>
+  			<h1 class="custom-jumbotron-header">Ian Brown</h1>
 			<p class="text-center">Witty line giving candid insight into Ian's personality but also describing what he is and plans to do.</p>
 		</div>
 	</div>
