--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<div class="jumbotron custom-jumbotron">
 		<div class="container">
   			<h1 class="custom-jumbotron-header">Ian Brown</h1>
-			<p class="text-center">Witty line giving candid insight into Ian's personality but also describing what he is and plans to do.</p>
+			<p class="text-center">Software Engineer, Language Generalist, and Computer Enthusiast</p>
 		</div>
 	</div>
 	
