--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>IB</title>
+        <title>Ian Brown</title>
         <meta name="description" content="Webpage containing all of the information you need to know about Ian Brown.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Reenie+Beanie|Roboto:400,100'>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/octicons/octicons.css">
-	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" href="css/custom.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Reenie+Beanie|Roboto:400,100'>
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/octicons/octicons.css">
+		<link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
+		<link rel="stylesheet" href="css/custom.css">
+		<script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
 
