Added standin favicon code to header.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 
 		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Reenie+Beanie|Roboto:400,100'>
 		<link rel="stylesheet" href="css/normalize.css">
