--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<div class="jumbotron custom-jumbotron">
 		<div class="container">
   			<h1 class="custom-jumbotron-header">Ian Brown</h1>
-			<p class="text-center">Software Engineer, Language Generalist, and Computer Enthusiast</p>
+			<p class="text-center">Software Engineer</p>
 		</div>
 	</div>
 	
