Added short bio from resume to index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<!-- About Section -->
 	<div class="container about" id="About">
 		<h1 class="custom-section-header">About</h1>
-		<p class="text-center">Short bio about Ian, his past and his plans for the future. Include some of his hobbies and interests and what he has done in pursuit of these.</p>
+		<p class="text-center">I am a language generalist who strives to learn new things as often as possible. I have design, development and implementation experience on multiple projects and have worked with a variety of technologies to create frontend and backend services as well as standalone applications. I enjoy working with open source technologies. My current interests are the Linux operating system the use of Node.js to create scalable network applications.</p>
 		<ul>
 			<li>Software Engineer</li>
 			<li>UMass Amherst Undergraduate --> Physics/Math</li>
