Updated about section in index.html

--- a/index.html
+++ b/index.html
@@ -63,28 +63,14 @@
 	<!-- About Section -->
 	<div class="container about" id="About">
 		<h1 class="custom-section-header">About</h1>
-		<p class="text-center">I am a language generalist who strives to learn new things as often as possible. I have design, development and implementation experience on multiple projects and have worked with a variety of technologies to create frontend and backend services as well as standalone applications. I enjoy working with open source technologies. My current interests are the Linux operating system the use of Node.js to create scalable network applications.</p>
-		<ul>
-			<li>Software Engineer</li>
-			<li>UMass Amherst Undergraduate --> Physics/Math</li>
-			<li>Georgia Tech Graduate --> OMSCS</li>
-			<li>Linux</li>
-			<li>C/C++ and Qt</li>
-			<li>Python and Django --> Backend</li>
-			<li>Javascript and Backbone --> Single page web application</li>
-			<li>HTML/CSS and Bootstrap --> Frontend development</li>
-			<li>Software system design</li>
-			<li>Data visualization and analysis</li>
-			<li>Software development</li>
-			<li>Optimization</li>
-		</ul>
+		<p class="text-center">I am a software developer/engineer currently focused on building scalable network applications. Even though this is my current focus I try to learn new software practices and technologies as often as possible. Technologies I have worked with range from C for embedded system control to the HTML/CSS/JavaScript for web application development. I enjoy working with open source technology and take every opportunity to use and contribute to the community. Check out <a href="https://github.com/imayobrown">my GitHub profile</a> to see what I'm working on.</p>
 	</div>
 
 	<div class="container projects" id="Projects">
 		<h1 class="custom-section-header">Projects</h1>
 		<row>
 			<div class="col-md-6">
-				<h3 class="project-title"><a href="#">data2Dash</a></h3>
+				<h3 class="project-title"><a href="https://github.com/imayobrown/data2Dash">data2Dash</a></h3>
 				<p>A small project that started as an exercise in using Python's Django Web Framework and Backbone to make single page web application. Through evolving ideas the future plan for the project is to create a self hosted platform for persistent data storage and display using a lightweight single page web application and RESTful API.</p>
 			</div>
 			<div class="col-md-6">
@@ -94,7 +80,7 @@
 		</row>
 		<row>
 		<div class="col-md-6 col-md-offset-3">
-			<h3 class="project-title"><a href="#">DesignDocumentTemplates</a></h3>
+			<h3 class="project-title"><a href="https://github.com/imayobrown/DesignDocumentTemplates">DesignDocumentTemplates</a></h3>
 			<p>A small set of design document templates in Markdown format. These were written to help facilitate the initial software design of a new project by defining the requirements and scope of the project.</p>
 		</div>
 	</div>
