Minor change to index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			</div>
 			<div class="col-md-6">
 				<h3 class="project-title"><a href="#">Graduate Class Projects</a></h3>
-				<p>A growing set of projects that were completed for classes taken in the Georgia Tech Masters of Science Computer Science program. Classes taken so far include Operating Systems and Software Development Process. Currently all code is located in private repositories to comply with Georgia Tech Academic Honesty. If interested in looking at any of the source code feel free to contact me for access to the GitHub repositories.</p>
+				<p>A growing set of projects that were completed for classes taken in the Georgia Tech Masters of Science Computer Science program. Currently all code is located in private repositories to comply with Georgia Tech Academic Honesty. If interested in looking at any of the source code feel free to contact me for access to the GitHub repositories.</p>
 			</div>
 		</row>
 		<row>
