--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 				<h3 class="project-title"><a href="#">data2Dash</a></h3>
 				<p>A small project that started as an exercise in using Python's Django Web Framework and Backbone to make single page web application. Through evolving ideas the future plan for the project is to create a self hosted platform for persistent data storage and display using a lightweight single page web application and RESTful API.</p>
 			</div>
+		</row>
+		<row>
 			<div class="col-md-6">
 				<h3 class="project-title"><a href="#">Graduate Class Projects</a></h3>
 				<p>A growing set of projects that were completed for classes taken in the Georgia Tech Masters of Science Computer Science program. Classes taken so far include Operating Systems and Software Development Process. Currently all code is located in private repositories to comply with Georgia Tech Academic Honesty. If interested in looking at any of the source code feel free to contact me for access to the GitHub repositories.</p>
