Modified layout of projects section.

--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
 	<div class="container projects" id="Projects">
 		<h1 class="custom-section-header">Projects</h1>
 		<row>
-			<div class="col-md-6 col-md-offset-3">
+			<div class="col-md-8">
 				<h3 class="project-title"><a href="https://github.com/imayobrown/data2Dash">data2Dash</a></h3>
 				<p>A small project that started as an exercise in using Python's Django Web Framework and Backbone to make single page web application. Through evolving ideas the future plan for the project is to create a self hosted platform for persistent data storage and display using a lightweight single page web application and RESTful API.</p>
 			</div>
 		</row>
 		<row>
-			<div class="col-md-6 col-md-offset-3">
+			<div class="col-md-8">
 				<h3 class="project-title"><a href="#">Graduate Class Projects</a></h3>
 				<p>A growing set of projects that were completed for classes taken in the Georgia Tech Masters of Science Computer Science program. Currently all code is located in private repositories to comply with Georgia Tech Academic Honesty. If interested in looking at any of the source code feel free to contact me for access to the GitHub repositories.</p>
 			</div>
 		</row>
 		<row>
-		<div class="col-md-6 col-md-offset-3">
+		<div class="col-md-8">
 			<h3 class="project-title"><a href="https://github.com/imayobrown/DesignDocumentTemplates">DesignDocumentTemplates</a></h3>
 			<p>A small set of design document templates in Markdown format. These were written to help facilitate the initial software design of a new project by defining the requirements and scope of the project.</p>
 		</div>
