Fixed spelling error on index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<!-- About Section -->
 	<div class="container about" id="About">
 		<h1 class="custom-section-header">About</h1>
-		<p class="text-center">I am a software developer/engineer currently focused on building scalable network applications. Even though this is my current focus I try to learn new software practices and technologies as often as possible. Technologies I have worked with range from C for embedded system control to the HTML/CSS/JavaScript for web application development. I enjoy working with open source technology and take every opportunity to use and contribute to the community. Check out <a href="https://github.com/imayobrown">my GitHub profile</a> to see what I'm working on.</p>
+		<p class="text-center">I am a software developer/engineer currently focused on building scalable network applications. Even though this is my current focus I try to learn new software practices and technologies as often as possible. Technologies I have worked with range from C for embedded system control to HTML/CSS/JavaScript for web application development. I enjoy working with open source technology and take every opportunity to use and contribute to the community. Check out <a href="https://github.com/imayobrown">my GitHub profile</a> to see what I'm working on.</p>
 	</div>
 
 	<div class="container projects" id="Projects">
