Updated site to have resume pdf

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="#About">About <span class="sr-only">(current)</span></a></li>
 					<li><a href="#Projects">Projects</a></li>
-					<li><a href="#">Resume</a></li>
+					<li><a href="/resume.pdf">Resume</a></li>
 					<li><a href="#Contact">Contact</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
